--- a/entries/01_ckskylakelinux_fallback.conf
+++ b/entries/01_ckskylakelinux_fallback.conf
@@ -1,9 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/01_ckskylakelinux_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T17:05:58+0200
+# date:   2021-04-20T20:39:26+0200
 
 label="Con Kolivas Skylake Linux 5.11 Fallback"
+loader_disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
 options="
