--- a/entries/02_manjarolinux5.12.conf
+++ b/entries/02_manjarolinux5.12.conf
@@ -1,9 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/02_manjarolinux5.12.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T17:06:04+0200
+# date:   2021-04-20T20:39:22+0200
 
 label="Manjaro Linux 5.12"
+loader_disk="/dev/nvme0n1"
 loader="/vmlinuz-5.12-x86_64"
 
 options="
