--- a/entries/05_manjarolinux5.11_fallback.conf
+++ b/entries/05_manjarolinux5.11_fallback.conf
@@ -1,9 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/05_manjarolinux5.11_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T17:06:20+0200
+# date:   2021-04-20T20:39:09+0200
 
 label="Manjaro Linux 5.11 Fallback"
+loader_disk="/dev/nvme0n1"
 loader="/vmlinuz-5.11-x86_64"
 
 options="
