--- a/entries/08_memtest86.conf
+++ b/entries/08_memtest86.conf
@@ -1,9 +1,8 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/08_memtest86.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T17:06:31+0200
+# date:   2021-04-20T20:38:48+0200
 
 label="MemTest86 9.0"
+loader_disk="/dev/nvme0n1"
 loader="/EFI/memtest86/BOOTX64.efi"
-
-options=""
