--- a/entries/00_ckskylakelinux.conf
+++ b/entries/00_ckskylakelinux.conf
@@ -1,10 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/00_ckskylakelinux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T20:39:31+0200
+# date:   2021-04-21T08:22:37+0200
 
 label="Con Kolivas Skylake Linux 5.11"
-loader_disk="/dev/nvme0n1"
+disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
 options="
@@ -18,5 +18,6 @@ options="
     mitigations=off
     # i915.mitigations=off
     random.trust_cpu=on
+    nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
