--- a/entries/03_manjarolinux5.12_fallback.conf
+++ b/entries/03_manjarolinux5.12_fallback.conf
@@ -1,10 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/03_manjarolinux5.12_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T20:39:17+0200
+# date:   2021-04-21T07:30:50+0200
 
 label="Manjaro Linux 5.12 Fallback"
-loader_disk="/dev/nvme0n1"
+disk="/dev/nvme0n1"
 loader="/vmlinuz-5.12-x86_64"
 
 options="
