--- a/entries/07_manjarolinux5.10_fallback.conf
+++ b/entries/07_manjarolinux5.10_fallback.conf
@@ -1,10 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/07_manjarolinux5.10_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-20T20:38:53+0200
+# date:   2021-04-21T07:31:30+0200
 
 label="Manjaro Linux 5.10 Fallback"
-loader_disk="/dev/nvme0n1"
+disk="/dev/nvme0n1"
 loader="/vmlinuz-5.10-x86_64"
 
 options="
