--- a/entries/10_ckskylakelinux.conf
+++ b/entries/10_ckskylakelinux.conf
@@ -1,15 +1,15 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/04_manjarolinux5.11.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/10_ckskylakelinux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-21T08:26:19+0200
+# date:   2021-04-22T09:09:47+0200
 
-label="Manjaro Linux 5.11"
+label="Con Kolivas Skylake Linux 5.11"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.11-x86_64"
+loader="/vmlinuz-linux-ck-skylake"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.11-x86_64.img
+    initrd=/initramfs-linux-ck-skylake.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
