--- a/entries/30_manjarolinux5.12.conf
+++ b/entries/30_manjarolinux5.12.conf
@@ -1,22 +1,22 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/00_ckskylakelinux.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/30_manjarolinux5.12.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-21T08:22:37+0200
+# date:   2021-04-22T09:09:56+0200
 
-label="Con Kolivas Skylake Linux 5.11"
+label="Manjaro Linux 5.12"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-ck-skylake"
+loader="/vmlinuz-5.12-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-ck-skylake.img
+    initrd=/initramfs-5.12-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
     quiet
     udev.log_priority=3
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
