--- a/entries/40_linux_5.12_fb.conf
+++ b/entries/40_linux_5.12_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjarolinux5.12_fallback.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/40_linux_5.12_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:10:05+0200
+# date:   2021-04-22T09:22:05+0200
 
 label="Manjaro Linux 5.12 Fallback"
 disk="/dev/nvme0n1"
