--- a/entries/60_linux_5.11_fb.conf
+++ b/entries/60_linux_5.11_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/60_manjarolinux5.11_fallback.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/60_linux_5.11_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:10:14+0200
+# date:   2021-04-22T09:22:13+0200
 
 label="Manjaro Linux 5.11 Fallback"
 disk="/dev/nvme0n1"
