--- a/entries/80_linux_5.10_fb.conf
+++ b/entries/80_linux_5.10_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/80_manjarolinux5.10_fallback.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/80_linux_5.10_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:10:21+0200
+# date:   2021-04-22T09:22:21+0200
 
 label="Manjaro Linux 5.10 Fallback"
 disk="/dev/nvme0n1"
