--- a/entries/70_linux_5.10.conf
+++ b/entries/70_linux_5.10.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/70_linux_5.10.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:22:16+0200
+# date:   2021-04-22T09:31:50+0200
 
-label="Manjaro Linux 5.10"
+label="Linux 5.10"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.10-x86_64"
 
