--- a/entries/30_linux_5.12.conf
+++ b/entries/30_linux_5.12.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/30_linux_5.12.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:22:02+0200
+# date:   2021-04-22T09:31:21+0200
 
-label="Manjaro Linux 5.12"
+label="Linux 5.12"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.12-x86_64"
 
