--- a/entries/40_linux_5.12_fb.conf
+++ b/entries/40_linux_5.12_fb.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/40_linux_5.12_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:22:05+0200
+# date:   2021-04-22T09:31:28+0200
 
-label="Manjaro Linux 5.12 Fallback"
+label="Linux 5.12 Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.12-x86_64"
 
