--- a/entries/50_linux_5.11.conf
+++ b/entries/50_linux_5.11.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/50_linux_5.11.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:22:09+0200
+# date:   2021-04-22T09:31:37+0200
 
-label="Manjaro Linux 5.11"
+label="Linux 5.11"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.11-x86_64"
 
