--- a/entries/60_linux_5.11_fb.conf
+++ b/entries/60_linux_5.11_fb.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/60_linux_5.11_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:22:13+0200
+# date:   2021-04-22T09:31:44+0200
 
-label="Manjaro Linux 5.11 Fallback"
+label="Linux 5.11 Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.11-x86_64"
 
