--- a/entries/20_ck_linux_fb.conf
+++ b/entries/20_ck_linux_fb.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:36:10+0200
+# date:   2021-04-22T10:15:00+0200
 
-label="Con Kolivas Skylake Linux Fallback"
+label="Con Kolivas Skylake Linux 5.11 Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
