--- a/entries/20_manjaro_linux_5.12.conf
+++ b/entries/20_manjaro_linux_5.12.conf
@@ -1,22 +1,22 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/70_linux_5.10.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/20_manjaro_linux_5.12.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:31:50+0200
+# date:   2021-04-22T14:57:11+0200
 
-label="Linux 5.10"
+label="Manjaro Linux 5.12"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.10-x86_64"
+loader="/vmlinuz-5.12-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.10-x86_64.img
+    initrd=/initramfs-5.12-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
     quiet
     udev.log_priority=3
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
