--- a/entries/40_manjaro_linux_5.10.conf
+++ b/entries/40_manjaro_linux_5.10.conf
@@ -1,15 +1,15 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/50_linux_5.11.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_5.10.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:31:37+0200
+# date:   2021-04-22T14:57:23+0200
 
-label="Linux 5.11"
+label="Manjaro Linux 5.10"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.11-x86_64"
+loader="/vmlinuz-5.10-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.11-x86_64.img
+    initrd=/initramfs-5.10-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
