--- a/entries/41_manjaro_linux_5.10_fb.conf
+++ b/entries/41_manjaro_linux_5.10_fb.conf
@@ -1,9 +1,9 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/80_linux_5.10_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_5.10_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T09:32:00+0200
+# date:   2021-04-22T14:57:28+0200
 
-label="Linux 5.10 Fallback"
+label="Manjaro Linux 5.10 Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-5.10-x86_64"
 
