--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,15 +1,15 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_5.10.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:57:23+0200
+# date:   2021-04-22T16:29:38+0200
 
-label="Manjaro Linux 5.10"
+label="Zen Linux 5.11.15"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.10-x86_64"
+loader="/vmlinuz-5.11.15-zen1-2-zen"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.10-x86_64.img
+    initrd=/initramfs-5.11.15-zen1-2-zen.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
