--- a/entries/21_ck_linux_fb.conf
+++ b/entries/21_ck_linux_fb.conf
@@ -1,9 +1,9 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/11_ck_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/21_ck_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:57:07+0200
+# date:   2021-04-22T16:29:51+0200
 
-label="Con Kolivas Skylake Linux Fallback"
+label="Con Kolivas Skylake Linux 5.11 Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
