--- a/entries/31_manjaro_linux_fb.conf
+++ b/entries/31_manjaro_linux_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/21_manjaro_linux_5.12_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:57:14+0200
+# date:   2021-04-22T16:30:00+0200
 
 label="Manjaro Linux 5.12 Fallback"
 disk="/dev/nvme0n1"
