--- a/entries/40_manjaro_linux_lts.conf
+++ b/entries/40_manjaro_linux_lts.conf
@@ -1,15 +1,15 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/00_zen_linux.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:42:46+0200
+# date:   2021-04-22T16:30:04+0200
 
-label="Zen Linux 5.11.15"
+label="Manjaro Linux 5.10"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.11.15-zen1-2-zen"
+loader="/vmlinuz-5.10-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.11.15-zen1-2-zen.img
+    initrd=/initramfs-5.10-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
