--- a/entries/41_manjaro_linux_lts_fb.conf
+++ b/entries/41_manjaro_linux_lts_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_5.10_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:57:28+0200
+# date:   2021-04-22T16:30:07+0200
 
 label="Manjaro Linux 5.10 Fallback"
 disk="/dev/nvme0n1"
