--- a/entries/50_memtest86.conf
+++ b/entries/50_memtest86.conf
@@ -1,8 +1,8 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/50_memtest86.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T14:57:33+0200
+# date:   2021-04-22T16:30:13+0200
 
-label="MemTest86"
+label="MemTest86 9.0"
 disk="/dev/nvme0n1"
 loader="/EFI/memtest86/BOOTX64.efi"
