--- a/entries/40_manjaro_linux_lts.conf
+++ b/entries/40_manjaro_linux_lts.conf
@@ -1,15 +1,17 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T16:30:04+0200
+# date:   2021-04-23T08:39:45+0200
 
-label="Manjaro Linux 5.10"
+version="5.10"
+
+label="Manjaro Linux $version"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.10-x86_64"
+loader="/vmlinuz-$version-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.10-x86_64.img
+    initrd=/initramfs-$version-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -21,3 +23,5 @@ options="
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
+
+unset version
