--- a/entries/41_manjaro_linux_lts_fb.conf
+++ b/entries/41_manjaro_linux_lts_fb.conf
@@ -1,14 +1,18 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T16:30:07+0200
+# date:   2021-04-23T08:39:53+0200
 
-label="Manjaro Linux 5.10 Fallback"
+version="5.10"
+
+label="Manjaro Linux $version Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.10-x86_64"
+loader="/vmlinuz-$version-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.10-x86_64-fallback.img
+    initrd=/initramfs-$version-x86_64-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
+
+unset version
