--- a/entries/20_ck_linux.conf
+++ b/entries/20_ck_linux.conf
@@ -1,9 +1,9 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T16:29:47+0200
+# date:   2021-04-23T08:27:51+0200
 
-label="Con Kolivas Skylake Linux 5.11"
+label="Con Kolivas Skylake Linux"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
