--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,15 +1,18 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T17:34:20+0200
+# date:   2021-04-23T08:42:30+0200
 
-label="Zen Linux 5.11"
+kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \;)"
+ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \;)"
+
+label="Zen Linux"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.11.15-zen1-2-zen"
+loader="/$kernel"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.11.15-zen1-2-zen.img
+    initrd=/$ramfs
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -21,3 +24,5 @@ options="
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
+
+unset kernel ramfs
