--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,14 +1,19 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-22T17:34:30+0200
+# date:   2021-04-23T08:42:42+0200
 
-label="Zen Linux 5.11 Fallback"
+kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \;)"
+ramfs="$(find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \;)"
+
+label="Zen Linux Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-5.11.15-zen1-2-zen"
+loader="/$kernel"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-5.11.15-zen1-2-zen-fallback.img
+    initrd=/$ramfs
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
+
+unset kernel ramfs
