--- a/entries/31_manjaro_linux_mainline_fb.conf
+++ b/entries/31_manjaro_linux_mainline_fb.conf
@@ -1,11 +1,11 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_mainline_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:39:37+0200
+# date:   2021-04-23T10:22:09+0200
 
 version="5.12"
 
-label="Manjaro Linux $version Fallback"
+label="Manjaro Linux Mainline $version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
