--- a/entries/40_manjaro_linux_stable.conf
+++ b/entries/40_manjaro_linux_stable.conf
@@ -1,11 +1,11 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_lts.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_stable.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:39:45+0200
+# date:   2021-04-23T10:22:28+0200
 
-version="5.10"
+version="5.11"
 
-label="Manjaro Linux $version"
+label="Manjaro Linux Stable $version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -18,7 +18,7 @@ options="
     quiet
     udev.log_priority=3
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
