--- a/entries/51_manjaro_linux_longterm_fb.conf
+++ b/entries/51_manjaro_linux_longterm_fb.conf
@@ -1,11 +1,11 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_lts_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/51_manjaro_linux_longterm_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:39:53+0200
+# date:   2021-04-23T10:23:14+0200
 
 version="5.10"
 
-label="Manjaro Linux $version Fallback"
+label="Manjaro Linux Longterm $version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
