--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,12 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:42:30+0200
+# date:   2021-05-06T11:57:45+0200
 
 kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \;)"
 ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \;)"
+version="$(printf "%s" "$kernel" | cut -d '-' -f2)"
 
-label="Zen Linux"
+label="Zen Linux $version"
 disk="/dev/nvme0n1"
 loader="/$kernel"
 
