use last found entry for kernel and ramfs

--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,10 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T11:57:45+0200
+# date:   2021-05-06T12:24:24+0200
 
-kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \;)"
-ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \;)"
+kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
+ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \; | tail -1)"
 version="$(printf "%s" "$kernel" | cut -d '-' -f2)"
 
 label="Zen Linux $version"
