--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,10 +1,10 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T11:59:01+0200
+# date:   2021-05-06T12:24:54+0200
 
-kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \;)"
-ramfs="$(find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \;)"
+kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
+ramfs="$(find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \; | tail -1)"
 version="$(printf "%s" "$kernel" | cut -d '-' -f2)"
 
 label="Zen Linux $version Fallback"
