unset version added

--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T12:24:24+0200
+# date:   2021-05-06T21:00:25+0200
 
 kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
 ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \; | tail -1)"
@@ -26,4 +26,4 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset kernel ramfs
+unset kernel ramfs version
