--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T12:24:54+0200
+# date:   2021-05-06T21:00:35+0200
 
 kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
 ramfs="$(find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \; | tail -1)"
@@ -17,4 +17,4 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-unset kernel ramfs
+unset kernel ramfs version
