--- a/entries/20_ck_linux.conf
+++ b/entries/20_ck_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:27:51+0200
+# date:   2021-05-10T08:20:45+0200
 
 label="Con Kolivas Skylake Linux"
 disk="/dev/nvme0n1"
@@ -16,7 +16,7 @@ options="
     quiet
     udev.log_priority=3
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
