--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,11 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T21:00:25+0200
+# date:   2021-05-10T08:28:48+0200
 
-kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
-ramfs="$(find /boot -iname "initramfs*zen.img" -exec basename {} \; | tail -1)"
-version="$(printf "%s" "$kernel" | cut -d '-' -f2)"
+kernel="$( \
+    find /boot -iname "vmlinuz*zen" -exec basename {} \; \
+        | sort \
+        | tail -1 \
+)"
+ramfs="$( \
+    find /boot -iname "initramfs*zen.img" -exec basename {} \; \
+        | sort \
+        | tail -1 \
+)"
+version="$( \
+    printf "%s" "$kernel" \
+        | cut -d '-' -f2 \
+)"
 
 label="Zen Linux $version"
 disk="/dev/nvme0n1"
@@ -20,7 +31,7 @@ options="
     quiet
     udev.log_priority=3
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     random.trust_cpu=on
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
