--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,11 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-06T21:00:35+0200
+# date:   2021-05-10T08:29:00+0200
 
-kernel="$(find /boot -iname "vmlinuz*zen" -exec basename {} \; | tail -1)"
-ramfs="$(find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \; | tail -1)"
-version="$(printf "%s" "$kernel" | cut -d '-' -f2)"
+kernel="$( \
+    find /boot -iname "vmlinuz*zen" -exec basename {} \; \
+        | sort \
+        | tail -1 \
+)"
+ramfs="$( \
+    find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \; \
+        | sort \
+        | tail -1 \
+)"
+version="$( \
+    printf "%s" "$kernel" \
+        | cut -d '-' -f2 \
+)"
 
 label="Zen Linux $version Fallback"
 disk="/dev/nvme0n1"
