--- a/entries/20_ck_linux.conf
+++ b/entries/20_ck_linux.conf
@@ -1,9 +1,17 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T08:20:45+0200
+# date:   2021-05-10T17:30:23+0200
 
-label="Con Kolivas Skylake Linux"
+package="linux-ck-skylake"
+
+version="$( \
+    pacman -Q --color never "$package" \
+        | cut -d ' ' -f2 \
+        | cut -d '-' -f1 \
+)"
+
+label="Con Kolivas Skylake Linux $version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
@@ -21,3 +29,5 @@ options="
     nowatchdog
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
+
+unset version
