--- a/entries/50_manjaro_linux_longterm.conf
+++ b/entries/50_manjaro_linux_longterm.conf
@@ -1,11 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/50_manjaro_linux_longterm.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T10:22:58+0200
+# date:   2021-05-10T17:40:10+0200
 
-version="5.10"
+package="linux510"
 
-label="Manjaro Linux Longterm $version"
+label_version="$( \
+    pacman -Q --color never "$package" \
+        | cut -d ' ' -f2 \
+        | cut -d '-' -f1 \
+)"
+
+version="$(
+    printf "%s" "$label_version" \
+        | cut -d '.' -f1,2 \
+)"
+
+label="Manjaro Linux Longterm $label_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -24,4 +35,4 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset version
+unset label_version version
