--- a/entries/21_ck_linux_fb.conf
+++ b/entries/21_ck_linux_fb.conf
@@ -1,9 +1,17 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/21_ck_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-04-23T08:28:12+0200
+# date:   2021-05-10T17:30:31+0200
 
-label="Con Kolivas Skylake Linux Fallback"
+package="linux-ck-skylake"
+
+version="$( \
+    pacman -Q --color never "$package" \
+        | cut -d ' ' -f2 \
+        | cut -d '-' -f1 \
+)"
+
+label="Con Kolivas Skylake Linux $version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
@@ -12,3 +20,5 @@ options="
     initrd=/initramfs-linux-ck-skylake-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
+
+unset version
