--- a/entries/30_manjaro_linux_mainline.conf
+++ b/entries/30_manjaro_linux_mainline.conf
@@ -1,11 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/30_manjaro_linux_mainline.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T08:17:59+0200
+# date:   2021-05-10T17:43:50+0200
 
-version="5.13"
+package="linux513"
 
-label="Manjaro Linux Mainline $version"
+label_version="$( \
+    pacman -Q --color never "$package" \
+        | cut -d ' ' -f2 \
+        | cut -d '.' -f1,2,3 \
+)"
+
+version="$(
+    printf "%s" "$label_version" \
+        | cut -d '.' -f1,2 \
+)"
+
+label="Manjaro Linux Mainline $label_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -24,4 +35,4 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset version
+unset label_version version
