--- a/entries/31_manjaro_linux_mainline_fb.conf
+++ b/entries/31_manjaro_linux_mainline_fb.conf
@@ -1,11 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_mainline_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T08:18:10+0200
+# date:   2021-05-10T17:45:33+0200
 
-version="5.13"
+package="linux513"
 
-label="Manjaro Linux Mainline $version Fallback"
+label_version="$( \
+    pacman -Q --color never "$package" \
+        | cut -d ' ' -f2 \
+        | cut -d '.' -f1,2,3 \
+)"
+
+version="$(
+    printf "%s" "$label_version" \
+        | cut -d '.' -f1,2 \
+)"
+
+label="Manjaro Linux Mainline $label_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -15,4 +26,4 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-unset version
+unset label_version version
