--- a/entries/10_zen_linux.conf
+++ b/entries/10_zen_linux.conf
@@ -1,12 +1,18 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_zen_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T18:21:08+0200
+# date:   2021-05-10T19:04:11+0200
 
+# helper
 kernel="$( \
     find /boot -iname "vmlinuz*zen" -exec basename {} \; \
         | sort \
         | tail -1 \
+)"
+
+kernel_version="$( \
+    printf "%s" "$kernel" \
+        | cut -d '-' -f2 \
 )"
 
 ramfs="$( \
@@ -15,12 +21,8 @@ ramfs="$( \
         | tail -1 \
 )"
 
-version="$( \
-    printf "%s" "$kernel" \
-        | cut -d '-' -f2 \
-)"
-
-label="Zen Linux $version"
+# efibootmgr options
+label="Zen Linux $kernel_version"
 disk="/dev/nvme0n1"
 loader="/$kernel"
 
@@ -39,4 +41,5 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset kernel ramfs version
+# unset helper
+unset kernel kernel_version ramfs
