--- a/entries/20_ck_linux.conf
+++ b/entries/20_ck_linux.conf
@@ -1,17 +1,17 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T17:30:23+0200
+# date:   2021-05-10T19:07:32+0200
 
-package="linux-ck-skylake"
-
-version="$( \
-    pacman -Q --color never "$package" \
+# helper
+package_version="$( \
+    pacman -Q --color never "linux-ck-skylake" \
         | cut -d ' ' -f2 \
         | cut -d '-' -f1 \
 )"
 
-label="Con Kolivas Skylake Linux $version"
+# efibootmgr options
+label="Con Kolivas Skylake Linux $package_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
@@ -30,4 +30,5 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset version
+# unset helper
+unset package_version
