--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,12 +1,18 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T18:21:30+0200
+# date:   2021-05-10T19:07:27+0200
 
+# helper
 kernel="$( \
     find /boot -iname "vmlinuz*zen" -exec basename {} \; \
         | sort \
         | tail -1 \
+)"
+
+kernel_version="$( \
+    printf "%s" "$kernel" \
+        | cut -d '-' -f2 \
 )"
 
 ramfs="$( \
@@ -15,12 +21,8 @@ ramfs="$( \
         | tail -1 \
 )"
 
-version="$( \
-    printf "%s" "$kernel" \
-        | cut -d '-' -f2 \
-)"
-
-label="Zen Linux $version Fallback"
+# efibootmgr options
+label="Zen Linux $kernel_version Fallback"
 disk="/dev/nvme0n1"
 loader="/$kernel"
 
@@ -30,4 +32,5 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-unset kernel ramfs version
+# unset helper
+unset kernel kernel_version ramfs
