--- a/entries/21_ck_linux_fb.conf
+++ b/entries/21_ck_linux_fb.conf
@@ -1,17 +1,17 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/21_ck_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T17:30:31+0200
+# date:   2021-05-10T19:07:38+0200
 
-package="linux-ck-skylake"
-
-version="$( \
-    pacman -Q --color never "$package" \
+# helper
+package_version="$( \
+    pacman -Q --color never "linux-ck-skylake" \
         | cut -d ' ' -f2 \
         | cut -d '-' -f1 \
 )"
 
-label="Con Kolivas Skylake Linux $version Fallback"
+# efibootmgr options
+label="Con Kolivas Skylake Linux $package_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-ck-skylake"
 
@@ -21,4 +21,5 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-unset version
+# unset helper
+unset package_version
