--- a/entries/41_manjaro_linux_stable_fb.conf
+++ b/entries/41_manjaro_linux_stable_fb.conf
@@ -1,22 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_stable_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T17:48:39+0200
+# date:   2021-05-10T19:08:02+0200
 
-package="linux512"
-
-label_version="$( \
-    pacman -Q --color never "$package" \
+# helper
+package_version="$( \
+    pacman -Q --color never "linux512" \
         | cut -d ' ' -f2 \
         | cut -d '-' -f1 \
 )"
 
 version="$(
-    printf "%s" "$label_version" \
+    printf "%s" "$package_version" \
         | cut -d '.' -f1,2 \
 )"
 
-label="Manjaro Linux Stable $label_version Fallback"
+# efibootmgr options
+label="Manjaro Linux Stable $package_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -26,4 +26,5 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-unset label_version
+# unset helper
+unset package_version version
