--- a/entries/50_manjaro_linux_longterm.conf
+++ b/entries/50_manjaro_linux_longterm.conf
@@ -1,22 +1,22 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/50_manjaro_linux_longterm.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T17:40:10+0200
+# date:   2021-05-10T19:08:06+0200
 
-package="linux510"
-
-label_version="$( \
-    pacman -Q --color never "$package" \
+# helper
+package_version="$( \
+    pacman -Q --color never "linux510" \
         | cut -d ' ' -f2 \
         | cut -d '-' -f1 \
 )"
 
 version="$(
-    printf "%s" "$label_version" \
+    printf "%s" "$package_version" \
         | cut -d '.' -f1,2 \
 )"
 
-label="Manjaro Linux Longterm $label_version"
+# efibootmgr options
+label="Manjaro Linux Longterm $package_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -35,4 +35,5 @@ options="
     snd_hda_codec_hdmi.enable_silent_stream=0
 "
 
-unset label_version version
+# unset helper
+unset package_version version
