--- a/entries/11_zen_linux_fb.conf
+++ b/entries/11_zen_linux_fb.conf
@@ -1,12 +1,12 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/11_zen_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T19:07:27+0200
+# date:   2021-06-12T07:39:03+0200
 
 # helper
 kernel="$( \
     find /boot -iname "vmlinuz*zen" -exec basename {} \; \
-        | sort \
+        | sort -V \
         | tail -1 \
 )"
 
@@ -17,7 +17,7 @@ kernel_version="$( \
 
 ramfs="$( \
     find /boot -iname "initramfs*zen-fallback.img" -exec basename {} \; \
-        | sort \
+        | sort -V \
         | tail -1 \
 )"
 
