package_version fixed and overall adjusted

--- a/entries/50_manjaro_linux_longterm.conf
+++ b/entries/50_manjaro_linux_longterm.conf
@@ -1,12 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/50_manjaro_linux_longterm.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-06-25T08:27:54+0200
+# date:   2021-07-02T08:34:46+0200
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux510" \
         | cut -d ' ' -f2 \
+        | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
