--- a/entries/30_manjaro_linux_mainline.conf
+++ b/entries/30_manjaro_linux_mainline.conf
@@ -1,13 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/30_manjaro_linux_mainline.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-06-25T08:28:13+0200
+# date:   2021-07-02T08:33:08+0200
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux513" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
+        | cut -d '-' -f1 \
 )"
 
 version="$(
