--- a/entries/31_manjaro_linux_mainline_fb.conf
+++ b/entries/31_manjaro_linux_mainline_fb.conf
@@ -1,13 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_mainline_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T19:07:52+0200
+# date:   2021-07-02T08:33:47+0200
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux513" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
+        | cut -d '-' -f1 \
 )"
 
 version="$(
