--- a/entries/40_manjaro_linux_stable.conf
+++ b/entries/40_manjaro_linux_stable.conf
@@ -1,12 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_stable.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-06-25T08:28:04+0200
+# date:   2021-07-02T08:34:32+0200
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux512" \
         | cut -d ' ' -f2 \
+        | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
