--- a/entries/41_manjaro_linux_stable_fb.conf
+++ b/entries/41_manjaro_linux_stable_fb.conf
@@ -1,12 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_stable_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-05-10T19:08:02+0200
+# date:   2021-07-02T08:34:39+0200
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux512" \
         | cut -d ' ' -f2 \
+        | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
