--- a/entries/22_manjaro_linux_mainline_fb.conf
+++ b/entries/22_manjaro_linux_mainline_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/30_manjaro_linux_mainline.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/22_manjaro_linux_mainline_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-12T18:46:03+0200
+# date:   2021-08-23T19:38:14+0200
 
 # helper
 package_version="$( \
@@ -17,28 +17,14 @@ version="$(
 )"
 
 # efibootmgr options
-label="Manjaro Linux Mainline $package_version"
+label="Manjaro Linux Mainline $package_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-$version-x86_64.img
+    initrd=/initramfs-$version-x86_64-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
-
-    # kernel parameter
-    quiet
-    udev.log_priority=3
-
-    random.trust_cpu=on
-    mitigations=off
-    i915.mitigations=off
-    i915.enable_guc=2
-    snd_hda_codec_hdmi.enable_silent_stream=0
-
-    nowatchdog
-    modprobe.blacklist=iTCO_wdt
-    modprobe.blacklist=btusb
 "
 
 # unset helper
