--- a/entries/23_manjaro_linux_stable_fb.conf
+++ b/entries/23_manjaro_linux_stable_fb.conf
@@ -1,11 +1,11 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/31_manjaro_linux_mainline_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/23_manjaro_linux_stable_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-12T18:46:10+0200
+# date:   2021-08-23T19:38:18+0200
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux514" \
+    pacman -Q --color never "linux513" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
@@ -17,7 +17,7 @@ version="$(
 )"
 
 # efibootmgr options
-label="Manjaro Linux Mainline $package_version Fallback"
+label="Manjaro Linux Stable $package_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
