--- a/entries/11_ck_linux.conf
+++ b/entries/11_ck_linux.conf
@@ -1,29 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/50_manjaro_linux_longterm.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/11_ck_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-02T08:34:46+0200
+# date:   2021-08-23T19:37:47+0200
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux510" \
+    pacman -Q --color never "linux-ck-skylake" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
-version="$(
-    printf "%s" "$package_version" \
-        | cut -d '.' -f1,2 \
-)"
-
 # efibootmgr options
-label="Manjaro Linux Longterm $package_version"
+label="Con Kolivas Skylake Linux $package_version"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-$version-x86_64"
+loader="/vmlinuz-linux-ck-skylake"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-$version-x86_64.img
+    initrd=/initramfs-linux-ck-skylake.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -32,7 +27,7 @@ options="
 
     random.trust_cpu=on
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
@@ -42,4 +37,4 @@ options="
 "
 
 # unset helper
-unset package_version version
+unset package_version
