--- a/entries/12_manjaro_linux_mainline.conf
+++ b/entries/12_manjaro_linux_mainline.conf
@@ -1,24 +1,29 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/20_ck_linux.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/12_manjaro_linux_mainline.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-02T08:36:11+0200
+# date:   2021-08-23T19:37:53+0200
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux-ck-skylake" \
+    pacman -Q --color never "linux514" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
+version="$(
+    printf "%s" "$package_version" \
+        | cut -d '.' -f1,2 \
+)"
+
 # efibootmgr options
-label="Con Kolivas Skylake Linux $package_version"
+label="Manjaro Linux Mainline $package_version"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-ck-skylake"
+loader="/vmlinuz-$version-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-ck-skylake.img
+    initrd=/initramfs-$version-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -37,4 +42,4 @@ options="
 "
 
 # unset helper
-unset package_version
+unset package_version version
