--- a/entries/13_manjaro_linux_stable.conf
+++ b/entries/13_manjaro_linux_stable.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/41_manjaro_linux_stable_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/13_manjaro_linux_stable.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-12T18:46:26+0200
+# date:   2021-08-23T19:37:58+0200
 
 # helper
 package_version="$( \
@@ -17,14 +17,28 @@ version="$(
 )"
 
 # efibootmgr options
-label="Manjaro Linux Stable $package_version Fallback"
+label="Manjaro Linux Stable $package_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-$version-x86_64-fallback.img
+    initrd=/initramfs-$version-x86_64.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+
+    # kernel parameter
+    quiet
+    udev.log_priority=3
+
+    random.trust_cpu=on
+    mitigations=off
+    i915.mitigations=off
+    i915.enable_guc=2
+    snd_hda_codec_hdmi.enable_silent_stream=0
+
+    nowatchdog
+    modprobe.blacklist=iTCO_wdt
+    modprobe.blacklist=btusb
 "
 
 # unset helper
