--- a/entries/14_manjaro_linux_longterm.conf
+++ b/entries/14_manjaro_linux_longterm.conf
@@ -1,11 +1,11 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/40_manjaro_linux_stable.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/14_manjaro_linux_longterm.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-07-12T18:46:18+0200
+# date:   2021-08-23T19:38:03+0200
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux513" \
+    pacman -Q --color never "linux510" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
@@ -17,7 +17,7 @@ version="$(
 )"
 
 # efibootmgr options
-label="Manjaro Linux Stable $package_version"
+label="Manjaro Linux Longterm $package_version"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-$version-x86_64"
 
@@ -32,7 +32,7 @@ options="
 
     random.trust_cpu=on
     mitigations=off
-    i915.mitigations=off
+    # i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
