--- a/entries/15_arch_linux_lts.conf
+++ b/entries/15_arch_linux_lts.conf
@@ -1,29 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/14_manjaro_linux_longterm.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/15_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-08-23T19:38:03+0200
+# date:   2021-10-13T16:08:05+0200
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux510" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f1,2,3 \
         | cut -d '-' -f1 \
 )"
 
-version="$(
-    printf "%s" "$package_version" \
-        | cut -d '.' -f1,2 \
-)"
-
 # efibootmgr options
-label="Manjaro Linux Longterm $package_version"
+label="Arch Linux $package_version LTS"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-$version-x86_64"
+loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-$version-x86_64.img
+    initrd=/initramfs-linux.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -42,4 +37,4 @@ options="
 "
 
 # unset helper
-unset package_version version
+unset package_version
