bluetooth completely disabled

--- a/entries/14_arch_linux.conf
+++ b/entries/14_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/14_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-10-13T16:07:59+0200
+# date:   2021-10-31T17:28:12+0100
 
 # helper
 package_version="$( \
@@ -31,8 +31,13 @@ options="
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
+    # disable watchdog
     nowatchdog
     modprobe.blacklist=iTCO_wdt
+
+    # disable bluetooth
+    modprobe.blacklist=bnep
+    modprobe.blacklist=bluetooth
     modprobe.blacklist=btusb
 "
 
