--- a/entries/31_arch_linux_lts_fb.conf
+++ b/entries/31_arch_linux_lts_fb.conf
@@ -1,24 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/20_arch_linux_zen_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/25_arch_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-10-13T16:08:10+0200
+# date:   2021-11-19T07:47:51+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux-zen" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
-        | cut -d '.' -f1,2,3 \
+        | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux Fallback $package_version ZEN"
+label="Arch Linux $package_version LTS Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen"
+loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-zen-fallback.img
+    initrd=/initramfs-linux-lts-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
