--- a/entries/21_arch_linux_fb.conf
+++ b/entries/21_arch_linux_fb.conf
@@ -1,18 +1,18 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/24_arch_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-10-13T16:08:14+0200
+# date:   2021-11-19T07:47:36+0100
 
 # helper
 package_version="$( \
     pacman -Q --color never "linux" \
         | cut -d ' ' -f2 \
-        | cut -d '.' -f1,2,3 \
+        | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux Fallback $package_version"
+label="Arch Linux $package_version Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux"
 
