--- a/entries/30_arch_linux_lts.conf
+++ b/entries/30_arch_linux_lts.conf
@@ -1,20 +1,20 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/14_arch_linux.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/15_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-10-31T17:28:12+0100
+# date:   2021-11-18T20:58:23+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
-        | cut -d '.' -f1,2,3 \
+        | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version"
+label="Arch Linux $package_version LTS"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux"
+loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
@@ -27,7 +27,7 @@ options="
 
     random.trust_cpu=on
     mitigations=off
-    i915.mitigations=off
+    # i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
