cpu default governor added to options

--- a/entries/30_arch_linux_lts.conf
+++ b/entries/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-12-01T08:58:08+0100
+# date:   2021-12-11T15:58:44+0100
 
 # helper
 package_version="$( \
@@ -25,6 +25,7 @@ options="
     quiet
     udev.log_priority=3
 
+    cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
     # i915.mitigations=off
