--- a/entries/10_arch_linux_zen.conf
+++ b/entries/10_arch_linux_zen.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-11-18T20:58:13+0100
+# date:   2021-12-11T15:53:57+0100
 
 # helper
 package_version="$( \
@@ -25,6 +25,7 @@ options="
     quiet
     udev.log_priority=3
 
+    cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
     i915.mitigations=off
