--- a/entries/20_arch_linux.conf
+++ b/entries/20_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/20_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-11-19T18:23:23+0100
+# date:   2021-12-11T15:58:31+0100
 
 # helper
 package_version="$( \
@@ -25,6 +25,7 @@ options="
     quiet
     udev.log_priority=3
 
+    cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
     i915.mitigations=off
