structure of the boot entries changed

--- a/entries/mi/10_arch_linux_zen.conf
+++ b/entries/mi/10_arch_linux_zen.conf
@@ -1,34 +1,34 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/30_arch_linux_lts.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/mi/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-12-11T15:58:44+0100
+# date:   2022-02-10T20:57:14+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux-lts" \
+    pacman -Q --color never "linux-zen" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version LTS"
+label="Arch Linux $package_version ZEN"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-lts"
+loader="/vmlinuz-linux-zen"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-lts.img
+    initrd=/initramfs-linux-zen.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
     quiet
     udev.log_priority=3
 
-    cpufreq.default_governor=performance
+    # cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
-    # i915.mitigations=off
+    i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
