--- a/entries/mi/31_arch_linux_lts_fb.conf
+++ b/entries/mi/31_arch_linux_lts_fb.conf
@@ -1,24 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/21_arch_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/mi/31_arch_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-11-19T18:23:27+0100
+# date:   2022-02-10T20:57:36+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version Fallback"
+label="Arch Linux $package_version LTS Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux"
+loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-fallback.img
+    initrd=/initramfs-linux-lts-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
