--- a/entries/m75q/31_arch_linux_lts_fb.conf
+++ b/entries/m75q/31_arch_linux_lts_fb.conf
@@ -1,7 +1,10 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/31_arch_linux_lts_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/m75q/31_arch_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2021-11-19T18:23:34+0100
+# date:   2022-02-10T20:56:26+0100
+
+# lenovo uefi does not support the same loader (workaround)
+cp -u /boot/vmlinuz-linux-lts /boot/vmlinuz-linux-lts-fb
 
 # helper
 package_version="$( \
@@ -14,12 +17,12 @@ package_version="$( \
 # efibootmgr options
 label="Arch Linux $package_version LTS Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-lts"
+loader="/vmlinuz-linux-lts-fb"
 
 options="
-    initrd=/intel-ucode.img
+    initrd=/amd-ucode.img
     initrd=/initramfs-linux-lts-fallback.img
-    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
 # unset helper
