memtest86 added and directories renamed

--- a/entries/intel/10_arch_linux_zen.conf
+++ b/entries/intel/10_arch_linux_zen.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/m75q/10_arch_linux_zen.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/intel/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:55:43+0100
+# date:   2022-02-14T16:57:50+0100
 
 # helper
 package_version="$( \
@@ -17,23 +17,29 @@ disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-zen"
 
 options="
-    initrd=/amd-ucode.img
+    initrd=/intel-ucode.img
     initrd=/initramfs-linux-zen.img
-    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
+    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
     quiet
     udev.log_priority=3
 
+    # cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
+    i915.mitigations=off
+    i915.enable_guc=2
+    snd_hda_codec_hdmi.enable_silent_stream=0
 
     # disable watchdog
     nowatchdog
-    modprobe.blacklist=sp5100_tco
+    modprobe.blacklist=iTCO_wdt
 
-    # disable beeper
-    modprobe.blacklist=pcspkr
+    # disable bluetooth
+    modprobe.blacklist=bnep
+    modprobe.blacklist=bluetooth
+    modprobe.blacklist=btusb
 "
 
 # unset helper
