--- a/entries/intel/11_arch_linux_zen_fb.conf
+++ b/entries/intel/11_arch_linux_zen_fb.conf
@@ -1,10 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/m75q/11_arch_linux_zen_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/intel/11_arch_linux_zen_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:55:52+0100
-
-# lenovo uefi does not support the same loader (workaround)
-cp -u /boot/vmlinuz-linux-zen /boot/vmlinuz-linux-zen-fb
+# date:   2022-02-14T16:57:55+0100
 
 # helper
 package_version="$( \
@@ -17,12 +14,12 @@ package_version="$( \
 # efibootmgr options
 label="Arch Linux $package_version ZEN Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen-fb"
+loader="/vmlinuz-linux-zen"
 
 options="
-    initrd=/amd-ucode.img
+    initrd=/intel-ucode.img
     initrd=/initramfs-linux-zen-fallback.img
-    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
+    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
 # unset helper
