--- a/entries/intel/30_arch_linux_lts.conf
+++ b/entries/intel/30_arch_linux_lts.conf
@@ -1,24 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/mi/10_arch_linux_zen.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/intel/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:57:14+0100
+# date:   2022-02-14T16:58:20+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux-zen" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version ZEN"
+label="Arch Linux $package_version LTS"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen"
+loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-zen.img
+    initrd=/initramfs-linux-lts.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # kernel parameter
@@ -28,7 +28,7 @@ options="
     # cpufreq.default_governor=performance
     random.trust_cpu=on
     mitigations=off
-    i915.mitigations=off
+    # i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
 
