--- a/entries/amd/10_arch_linux_zen.conf
+++ b/entries/amd/10_arch_linux_zen.conf
@@ -1,24 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/m75q/20_arch_linux.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/amd/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:55:59+0100
+# date:   2022-02-14T16:57:13+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux" \
+    pacman -Q --color never "linux-zen" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version"
+label="Arch Linux $package_version ZEN"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux"
+loader="/vmlinuz-linux-zen"
 
 options="
     initrd=/amd-ucode.img
-    initrd=/initramfs-linux.img
+    initrd=/initramfs-linux-zen.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
     # kernel parameter
