--- a/entries/amd/31_arch_linux_lts_fb.conf
+++ b/entries/amd/31_arch_linux_lts_fb.conf
@@ -1,27 +1,27 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/m75q/21_arch_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/amd/31_arch_linux_lts_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:56:15+0100
+# date:   2022-02-14T16:57:42+0100
 
 # lenovo uefi does not support the same loader (workaround)
-cp -u /boot/vmlinuz-linux /boot/vmlinuz-linux-fb
+cp -u /boot/vmlinuz-linux-lts /boot/vmlinuz-linux-lts-fb
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux" \
+    pacman -Q --color never "linux-lts" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version Fallback"
+label="Arch Linux $package_version LTS Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-fb"
+loader="/vmlinuz-linux-lts-fb"
 
 options="
     initrd=/amd-ucode.img
-    initrd=/initramfs-linux-fallback.img
+    initrd=/initramfs-linux-lts-fallback.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
