--- a/entries/intel/21_arch_linux_fb.conf
+++ b/entries/intel/21_arch_linux_fb.conf
@@ -1,24 +1,24 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/mi/11_arch_linux_zen_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/intel/21_arch_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-10T20:57:20+0100
+# date:   2022-02-14T16:58:15+0100
 
 # helper
 package_version="$( \
-    pacman -Q --color never "linux-zen" \
+    pacman -Q --color never "linux" \
         | cut -d ' ' -f2 \
         | cut -d '.' -f-3 \
         | cut -d '-' -f1 \
 )"
 
 # efibootmgr options
-label="Arch Linux $package_version ZEN Fallback"
+label="Arch Linux $package_version Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen"
+loader="/vmlinuz-linux"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-zen-fallback.img
+    initrd=/initramfs-linux-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
