cpu default governor added

--- a/entries/amd/10_arch_linux_zen.conf
+++ b/entries/amd/10_arch_linux_zen.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/amd/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-14T16:57:13+0100
+# date:   2022-07-18T13:02:36+0200
 
 # helper
 package_version="$( \
@@ -27,6 +27,7 @@ options="
 
     random.trust_cpu=on
     mitigations=off
+    cpufreq.default_governor=powersave
 
     # disable watchdog
     nowatchdog
