--- a/entries/intel/10_arch_linux_zen.conf
+++ b/entries/intel/10_arch_linux_zen.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/intel/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-03-26T12:30:08+0100
+# date:   2022-07-18T13:07:04+0200
 
 # helper
 package_version="$( \
@@ -30,6 +30,7 @@ options="
     i915.mitigations=off
     i915.enable_guc=2
     snd_hda_codec_hdmi.enable_silent_stream=0
+    cpufreq.default_governor=performance
 
     # disable watchdog
     nowatchdog
