cpu default governor commented out

--- a/entries/intel/10_arch_linux_zen.conf
+++ b/entries/intel/10_arch_linux_zen.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/intel/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-08-19T20:25:05+0200
+# date:   2022-09-09T19:29:52+0200
 
 # helper
 package_version="$( \
@@ -29,7 +29,7 @@ options="
     mitigations=off
     i915.mitigations=off
     i915.enable_guc=2
-    cpufreq.default_governor=performance
+    # cpufreq.default_governor=performance
 
     # disable watchdog
     nowatchdog
