--- a/entries/intel/10_arch_linux_zen.conf
+++ b/entries/intel/10_arch_linux_zen.conf
@@ -1,18 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/intel/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-09-09T19:29:52+0200
+# date:   2022-11-03T20:08:56+0100
 
-# helper
-package_version="$( \
-    pacman -Q --color never "linux-zen" \
-        | cut -d ' ' -f2 \
-        | cut -d '.' -f-3 \
-        | cut -d '-' -f1 \
-)"
+# use version number in entry
+version_number=false
 
 # efibootmgr options
-label="Arch Linux $package_version ZEN"
+label="Arch Linux ZEN"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-zen"
 
@@ -41,5 +36,13 @@ options="
     modprobe.blacklist=btusb
 "
 
-# unset helper
-unset package_version
+# version number
+[ $version_number = true ] \
+    && package_version="$( \
+        pacman -Q --color never "linux-zen" \
+            | cut -d ' ' -f2 \
+            | cut -d '.' -f-3 \
+            | cut -d '-' -f1 \
+    )" \
+    && label="Arch Linux $package_version ZEN" \
+    && unset package_version
