--- a/entries/amd/11_arch_linux_zen_fb.conf
+++ b/entries/amd/11_arch_linux_zen_fb.conf
@@ -1,21 +1,16 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/amd/11_arch_linux_zen_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-14T16:57:20+0100
+# date:   2022-11-03T20:06:20+0100
 
-# lenovo uefi does not support the same loader (workaround)
+# use version number in entry
+version_number=false
+
+# WORKAROUND: lenovo uefi does not support the same loader
 cp -u /boot/vmlinuz-linux-zen /boot/vmlinuz-linux-zen-fb
 
-# helper
-package_version="$( \
-    pacman -Q --color never "linux-zen" \
-        | cut -d ' ' -f2 \
-        | cut -d '.' -f-3 \
-        | cut -d '-' -f1 \
-)"
-
 # efibootmgr options
-label="Arch Linux $package_version ZEN Fallback"
+label="Arch Linux ZEN Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-zen-fb"
 
@@ -25,5 +20,13 @@ options="
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
-# unset helper
-unset package_version
+# version number
+[ $version_number = true ] \
+    && package_version="$( \
+        pacman -Q --color never "linux-zen" \
+            | cut -d ' ' -f2 \
+            | cut -d '.' -f-3 \
+            | cut -d '-' -f1 \
+    )" \
+    && label="Arch Linux $package_version ZEN Fallback" \
+    && unset package_version
