--- a/entries/intel/21_arch_linux_fb.conf
+++ b/entries/intel/21_arch_linux_fb.conf
@@ -1,18 +1,13 @@
 # path:   /home/klassiker/.local/share/repos/efistub/entries/intel/21_arch_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-14T16:58:15+0100
+# date:   2022-11-03T20:12:55+0100
 
-# helper
-package_version="$( \
-    pacman -Q --color never "linux" \
-        | cut -d ' ' -f2 \
-        | cut -d '.' -f-3 \
-        | cut -d '-' -f1 \
-)"
+# use version number in entry
+version_number=false
 
 # efibootmgr options
-label="Arch Linux $package_version Fallback"
+label="Arch Linux Fallback"
 disk="/dev/nvme0n1"
 loader="/vmlinuz-linux"
 
@@ -22,5 +17,13 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
-# unset helper
-unset package_version
+# version number
+[ $version_number = true ] \
+    && package_version="$( \
+        pacman -Q --color never "linux" \
+            | cut -d ' ' -f2 \
+            | cut -d '.' -f-3 \
+            | cut -d '-' -f1 \
+    )" \
+    && label="Arch Linux $package_version Fallback" \
+    && unset package_version
