--- a/entries/other/90_memtest86.conf
+++ b/entries/other/90_memtest86.conf
@@ -1,14 +1,20 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/90_memtest86.conf
+# path:   /home/klassiker/.local/share/repos/efistub/entries/other/90_memtest86.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-02-14T16:53:21+0100
+# date:   2022-11-03T20:05:48+0100
 
-# helper
-version="$(
-    cat /boot/EFI/memtest86/version \
-)"
+# use version number in entry
+version_number=false
 
 # efibootmgr options
-label="MemTest86 $version"
+label="MemTest86"
 disk="/dev/nvme0n1"
 loader="/EFI/memtest86/BOOTX64.efi"
+
+# version number
+[ $version_number = true ] \
+    package_version="$(
+        cat /boot/EFI/memtest86/version \
+    )" \
+    && label="MemTest86 $package_version" \
+    && unset package_version
