folder entries renamed to examples

--- a/examples/amd/30_arch_linux_lts.conf
+++ b/examples/amd/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/intel/30_arch_linux_lts.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-11-03T20:13:46+0100
+# date:   2022-12-23T13:49:55+0100
 
 # use version number in entry
 version_number=false
@@ -12,9 +12,9 @@ disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-lts"
 
 options="
-    initrd=/intel-ucode.img
+    initrd=/amd-ucode.img
     initrd=/initramfs-linux-lts.img
-    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
     # kernel parameter
     quiet
@@ -22,18 +22,15 @@ options="
 
     random.trust_cpu=on
     mitigations=off
-    # i915.mitigations=off
-    i915.enable_guc=2
-    # cpufreq.default_governor=performance
+    amd_pstate=passive
+    #cpufreq.default_governor=powersave
 
     # disable watchdog
     nowatchdog
-    modprobe.blacklist=iTCO_wdt
+    modprobe.blacklist=sp5100_tco
 
-    # disable bluetooth
-    modprobe.blacklist=bnep
-    modprobe.blacklist=bluetooth
-    modprobe.blacklist=btusb
+    # disable beeper
+    modprobe.blacklist=pcspkr
 "
 
 # version number
