--- a/examples/amd/11_arch_linux_zen_fb.conf
+++ b/examples/amd/11_arch_linux_zen_fb.conf
@@ -1,29 +1,29 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/amd/31_arch_linux_lts_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/11_arch_linux_zen_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-04T12:23:07+0100
+# date:   2022-12-23T13:49:41+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
-label="Arch Linux LTS Fallback"
+label="Arch Linux ZEN Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-lts-fb"
+loader="/vmlinuz-linux-zen-fb"
 
 options="
     initrd=/amd-ucode.img
-    initrd=/initramfs-linux-lts-fallback.img
+    initrd=/initramfs-linux-zen-fallback.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
 # version number
 [ $version_number = true ] \
     && package_version="$( \
-        pacman -Q --color never "linux-lts" \
+        pacman -Q --color never "linux-zen" \
             | cut -d ' ' -f2 \
             | cut -d '.' -f-3 \
             | cut -d '-' -f1 \
     )" \
-    && label="Arch Linux $package_version LTS Fallback" \
+    && label="Arch Linux $package_version ZEN Fallback" \
     && unset package_version
