--- a/examples/intel/21_arch_linux_fb.conf
+++ b/examples/intel/21_arch_linux_fb.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/entries/amd/21_arch_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-04T12:22:59+0100
+# date:   2022-12-23T13:50:19+0100
 
 # use version number in entry
 version_number=false
@@ -9,12 +9,12 @@ version_number=false
 # efibootmgr options
 label="Arch Linux Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-fb"
+loader="/vmlinuz-linux"
 
 options="
-    initrd=/amd-ucode.img
+    initrd=/intel-ucode.img
     initrd=/initramfs-linux-fallback.img
-    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
+    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
 # version number
