--- a/examples/intel/10_arch_linux_zen.conf
+++ b/examples/intel/10_arch_linux_zen.conf
@@ -1,14 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux_zen.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-23T13:50:08+0100
+# date:   2023-01-12T17:53:09+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux ZEN"
-disk="/dev/nvme0n1"
+disk="/dev/sda1"
 loader="/vmlinuz-linux-zen"
 
 options="
