--- a/examples/intel/21_arch_linux_fb.conf
+++ b/examples/intel/21_arch_linux_fb.conf
@@ -1,14 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2022-12-23T13:50:19+0100
+# date:   2023-01-12T17:53:40+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux Fallback"
-disk="/dev/nvme0n1"
+disk="/dev/sda1"
 loader="/vmlinuz-linux"
 
 options="
