linux-zen replaced by linux-hardened

--- a/examples/amd/21_arch_linux_hardened_fb.conf
+++ b/examples/amd/21_arch_linux_hardened_fb.conf
@@ -1,29 +1,29 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/21_arch_linux_zen_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/21_arch_linux_hardened_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-01-26T09:16:30+0100
+# date:   2023-03-08T18:56:39+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
-label="Arch Linux ZEN Fallback"
+label="Arch Linux Hardened Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen-fb"
+loader="/vmlinuz-linux-hardened-fb"
 
 options="
     initrd=/amd-ucode.img
-    initrd=/initramfs-linux-zen-fallback.img
+    initrd=/initramfs-linux-hardened-fallback.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
 # version number
 [ $version_number = true ] \
     && package_version="$( \
-        pacman -Q --color never "linux-zen" \
+        pacman -Q --color never "linux-hardened" \
             | cut -d ' ' -f2 \
             | cut -d '.' -f-3 \
             | cut -d '-' -f1 \
     )" \
-    && label="Arch Linux $package_version ZEN Fallback" \
+    && label="Arch Linux $package_version Hardened Fallback" \
     && unset package_version
