--- a/examples/amd/20_arch_linux_hardened.conf
+++ b/examples/amd/20_arch_linux_hardened.conf
@@ -1,19 +1,19 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/20_arch_linux_zen.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/20_arch_linux_hardened.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-02-15T08:27:27+0100
+# date:   2023-03-08T18:56:20+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
-label="Arch Linux ZEN"
+label="Arch Linux Hardened"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-zen"
+loader="/vmlinuz-linux-hardened"
 
 options="
     initrd=/amd-ucode.img
-    initrd=/initramfs-linux-zen.img
+    initrd=/initramfs-linux-hardened.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
     # kernel parameter
@@ -35,10 +35,10 @@ options="
 # version number
 [ $version_number = true ] \
     && package_version="$( \
-        pacman -Q --color never "linux-zen" \
+        pacman -Q --color never "linux-hardened" \
             | cut -d ' ' -f2 \
             | cut -d '.' -f-3 \
             | cut -d '-' -f1 \
     )" \
-    && label="Arch Linux $package_version ZEN" \
+    && label="Arch Linux $package_version Hardened" \
     && unset package_version
