--- a/examples/intel/21_arch_linux_hardened_fb.conf
+++ b/examples/intel/21_arch_linux_hardened_fb.conf
@@ -1,29 +1,29 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_zen_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_hardened_fb.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-01-26T09:14:05+0100
+# date:   2023-03-08T19:10:36+0100
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
-label="Arch Linux ZEN Fallback"
+label="Arch Linux Hardened Fallback"
 disk="/dev/sda1"
-loader="/vmlinuz-linux-zen"
+loader="/vmlinuz-linux-hardened"
 
 options="
     initrd=/intel-ucode.img
-    initrd=/initramfs-linux-zen-fallback.img
+    initrd=/initramfs-linux-hardened-fallback.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 "
 
 # version number
 [ $version_number = true ] \
     && package_version="$( \
-        pacman -Q --color never "linux-zen" \
+        pacman -Q --color never "linux-hardened" \
             | cut -d ' ' -f2 \
             | cut -d '.' -f-3 \
             | cut -d '-' -f1 \
     )" \
-    && label="Arch Linux $package_version ZEN Fallback" \
+    && label="Arch Linux $package_version Hardened Fallback" \
     && unset package_version
