kernel parameter for tpm added

--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-02-15T08:27:19+0100
+# date:   2023-03-15T07:52:26+0100
 
 # use version number in entry
 version_number=false
@@ -20,6 +20,7 @@ options="
     quiet
     udev.log_priority=3
 
+    tpm_tis.interrupts=0
     mitigations=off
     #amd_pstate=passive
     cpufreq.default_governor=powersave
