file name from fb to fallback changed

--- a/examples/amd/11_arch_linux_fallback.conf
+++ b/examples/amd/11_arch_linux_fallback.conf
@@ -1,7 +1,7 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/11_arch_linux_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/11_arch_linux_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-01-26T09:16:21+0100
+# date:   2023-04-14T08:43:29+0200
 
 # use version number in entry
 version_number=false
@@ -9,7 +9,7 @@ version_number=false
 # efibootmgr options
 label="Arch Linux Fallback"
 disk="/dev/nvme0n1"
-loader="/vmlinuz-linux-fb"
+loader="/vmlinuz-linux-fallback"
 
 options="
     initrd=/amd-ucode.img
