--- a/examples/amd/21_arch_linux_hardened_fallback.conf
+++ b/examples/amd/21_arch_linux_hardened_fallback.conf
@@ -1,20 +1,20 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_hardened_fb.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/21_arch_linux_hardened_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-03-08T19:10:36+0100
+# date:   2023-04-14T08:43:49+0200
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux Hardened Fallback"
-disk="/dev/sda1"
-loader="/vmlinuz-linux-hardened"
+disk="/dev/nvme0n1"
+loader="/vmlinuz-linux-hardened-fallback"
 
 options="
-    initrd=/intel-ucode.img
+    initrd=/amd-ucode.img
     initrd=/initramfs-linux-hardened-fallback.img
-    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 "
 
 # version number
