lenovo mitigations added

--- a/examples/amd/20_arch_linux_hardened.conf
+++ b/examples/amd/20_arch_linux_hardened.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/20_arch_linux_hardened.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-04-24T21:49:12+0200
+# date:   2023-07-22T19:46:20+0200
 
 # use version number in entry
 version_number=false
@@ -16,11 +16,14 @@ options="
     initrd=/initramfs-linux-hardened.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
+    # lenovo (firmware bugs) mitigations
+    tpm_tis.interrupts=0
+    tsc=nowatchdog
+
     # kernel parameter
     quiet
     udev.log_priority=3
 
-    tpm_tis.interrupts=0
     mitigations=off
     #amd_pstate=active
     cpufreq.default_governor=powersave
