--- a/examples/amd/30_arch_linux_lts.conf
+++ b/examples/amd/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-04-24T21:49:23+0200
+# date:   2023-07-22T19:47:35+0200
 
 # use version number in entry
 version_number=false
@@ -15,6 +15,10 @@ options="
     initrd=/amd-ucode.img
     initrd=/initramfs-linux-lts.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
+
+    # lenovo (firmware bugs) mitigations
+    tpm_tis.interrupts=0
+    tsc=nowatchdog
 
     # kernel parameter
     quiet
