cpufreq.default_governor removed

--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-09-10T11:47:22+0200
+# date:   2023-09-10T18:11:37+0200
 
 # use version number in entry
 version_number=false
@@ -16,16 +16,16 @@ options="
     initrd=/initramfs-linux.img
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
-    # lenovo (firmware bugs) mitigations
-    tpm_tis.interrupts=0
-    tsc=nowatchdog
-
-    # kernel parameter
+    # logging
     quiet
     udev.log_priority=3
 
+    # mitigations
     mitigations=off
-    cpufreq.default_governor=powersave
+
+    # lenovo (firmware bugs) mitigations
+    tpm_tis.interrupts=0
+    tsc=nowatchdog
 
     # disable watchdog
     nowatchdog
