--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-02-15T08:44:57+0100
+# date:   2023-09-10T19:48:22+0200
 
 # use version number in entry
 version_number=false
@@ -16,14 +16,14 @@ options="
     initrd=/initramfs-linux.img
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
-    # kernel parameter
+    # logging
     quiet
     udev.log_priority=3
 
+    # mitigations
     mitigations=off
     i915.mitigations=off
     i915.enable_guc=2
-    # cpufreq.default_governor=performance
 
     # disable watchdog
     nowatchdog
