--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-09-10T18:11:37+0200
+# date:   2023-09-16T07:45:40+0200
 
 # use version number in entry
 version_number=false
@@ -26,6 +26,9 @@ options="
     # lenovo (firmware bugs) mitigations
     tpm_tis.interrupts=0
     tsc=nowatchdog
+
+    # cpu
+    #amd_pstate=disable
 
     # disable watchdog
     nowatchdog
