--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-09-10T19:48:22+0200
+# date:   2023-09-16T07:49:56+0200
 
 # use version number in entry
 version_number=false
@@ -23,7 +23,12 @@ options="
     # mitigations
     mitigations=off
     i915.mitigations=off
+
+    # gpu
     i915.enable_guc=2
+
+    # cpu
+    #intel_pstate=disable
 
     # disable watchdog
     nowatchdog
