--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-09-16T07:49:56+0200
+# date:   2023-12-05T20:07:20+0100
 
 # use version number in entry
 version_number=false
@@ -17,8 +17,8 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # logging
-    quiet
-    udev.log_priority=3
+    #quiet
+    #udev.log_priority=3
 
     # mitigations
     mitigations=off
