kernel parameter for log level added

--- a/examples/intel/30_arch_linux_lts.conf
+++ b/examples/intel/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2023-12-05T20:07:39+0100
+# date:   2024-02-22T10:14:14+0100
 
 # use version number in entry
 version_number=false
@@ -17,14 +17,15 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # logging
-    #quiet
+    loglevel=3
     #udev.log_priority=3
+    #quiet
 
     # mitigations
     mitigations=off
     i915.mitigations=off
 
-    #gpu
+    # gpu
     i915.enable_guc=2
 
     # cpu
